log
Fri 29 Mar 2024 09:42:50 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
   37 |      return List;
      |             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ff95e12
Fri 29 Mar 2024 09:43:09 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
   37 |      return List;
      |             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7545250
Fri 29 Mar 2024 09:44:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
 tests:  1|5
total_score: 10/70
total_score: 10/70
e2c18e3
e2c18e3
Fri 29 Mar 2024 09:46:52 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
590c381
Fri 29 Mar 2024 09:52:48 PM UTC: 
 list.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  0|0
2a1c86a
Fri 29 Mar 2024 09:58:09 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0f471b2
Fri 29 Mar 2024 09:58:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a8dcbd
Fri 29 Mar 2024 09:58:47 PM UTC: 
 list.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
test.c: In function ‘prevList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:89:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   89 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:80:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   80 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:67:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   67 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4f2b508
Fri 29 Mar 2024 09:59:15 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
af74313
Fri 29 Mar 2024 10:00:12 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
93e3008
Fri 29 Mar 2024 10:00:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|0
   [ INFO ] llamando a nextList
9618836
Fri 29 Mar 2024 10:01:36 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
06d27eb
Fri 29 Mar 2024 10:02:15 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
701df13
Fri 29 Mar 2024 10:02:36 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
0fd8b30
Fri 29 Mar 2024 10:07:52 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
d7baf2a
Fri 29 Mar 2024 10:10:29 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|0
   [ INFO ] Insertando 43 a la lista (pushfront)
f058caa
Fri 29 Mar 2024 10:14:57 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  0|0
61f0d31
Fri 29 Mar 2024 10:17:54 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
202f934
Fri 29 Mar 2024 10:18:24 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
937f866
Fri 29 Mar 2024 10:20:14 PM UTC: 
 list.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:33: error: expected expression before ‘)’ token
   73 |   if(list == NULL) return exit(*);
      |                                 ^
list.c:73:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   73 |   if(list == NULL) return exit(*);
      |                           ^~~~
list.c:72:6: note: declared here
   72 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:75:33: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   75 |   if(list->head == NULL) return NULL;
      |                                 ^~~~
list.c:72:6: note: declared here
   72 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c6bbe23
Fri 29 Mar 2024 10:21:18 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|0
   [ INFO ] Insertando 8 a la lista (pushfront)
35be71e
Fri 29 Mar 2024 10:24:01 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
32fbcc6
Fri 29 Mar 2024 10:26:30 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6d92bf7
Fri 29 Mar 2024 10:31:48 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
d885484
Fri 29 Mar 2024 10:33:36 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
f58b7c0
Fri 29 Mar 2024 10:35:13 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
60ed7dc
Fri 29 Mar 2024 10:36:47 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   73 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:72:6: note: declared here
   72 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c: In function ‘pushBack’:
list.c:82:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   82 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:81:6: note: declared here
   81 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6a7de9f
Fri 29 Mar 2024 10:38:46 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
931c9c8
Fri 29 Mar 2024 10:39:57 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|0
   [ INFO ] Insertando 90 a la lista (pushfront)
d403511
Fri 29 Mar 2024 10:41:50 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|0
   [ INFO ] Insertando 68 a la lista (pushfront)
f2e8b76
Fri 29 Mar 2024 10:52:32 PM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  9|0
   [ INFO ] Insertando 38 a la lista (pushfront)
47ddbbf
Fri 29 Mar 2024 10:53:20 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
084d1c6
Fri 29 Mar 2024 10:54:00 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
66ce93f
Fri 29 Mar 2024 10:54:39 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
3b0765e
Fri 29 Mar 2024 10:55:19 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
f2314e9
Fri 29 Mar 2024 10:56:04 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
6c161bc
Fri 29 Mar 2024 10:56:59 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
cd1cae1
Fri 29 Mar 2024 10:59:21 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
391d20f
Fri 29 Mar 2024 11:00:56 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
844a687
Fri 29 Mar 2024 11:01:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5309ea2
Fri 29 Mar 2024 11:04:06 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
7410c5a
Fri 29 Mar 2024 11:06:32 PM UTC: 
 list.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  0|0
51abb04
Fri 29 Mar 2024 11:12:03 PM UTC: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
59602c0
Fri 29 Mar 2024 11:13:13 PM UTC: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
e740a44
Fri 29 Mar 2024 11:22:07 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
d152e57
Fri 29 Mar 2024 11:24:14 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  10|2
total_score: 45/70
6dea4f4
Fri 29 Mar 2024 11:29:54 PM UTC: 
 list.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  11|1
total_score: 55/70
e7e33d2
Fri 29 Mar 2024 11:38:11 PM UTC: 
 list.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccDJ5PUY.o: in function `cleanList':
test.c:(.text+0x254): undefined reference to `popFront'
collect2: error: ld returned 1 exit status
Compilation failed
f49cdcb
Fri 29 Mar 2024 11:40:14 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
c5f0216
